<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.AdminDetailDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="@dimen/cardview_default_elevation"
            android:layout_margin="@dimen/cardLayoutMargin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibPhotoAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/user_foreground"
                    android:layout_gravity="center_horizontal"/>
                <EditText
                    android:id="@+id/etNameAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintName"
                    android:inputType="textMultiLine"
                    android:gravity="center_horizontal"/>
                <EditText
                    android:id="@+id/etAdresseAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintAdresse"
                    android:inputType="textMultiLine"
                    android:gravity="center_horizontal"/>
                <EditText
                    android:id="@+id/etPhoneAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintPhone"
                    android:inputType="textMultiLine"
                    android:gravity="center_horizontal"/>
                <EditText
                    android:id="@+id/etMailAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintMail"
                    android:inputType="textMultiLine"
                    android:gravity="center_horizontal"/>
                <Button
                    android:id="@+id/btBuyProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/blue"
                    android:text="@string/ibSendButton"
                    android:textColor="@color/lightBlue"
                    android:layout_marginTop="@dimen/cardLayoutMargin"
                    android:layout_marginRight="@dimen/cardLayoutMargin"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>